# harombe

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CI_FIXES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  flake.nix  harombe.yaml.example  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  publish.yml
CONTRIBUTING/: index.html
DEVELOPMENT/: index.html
architecture/overview/: index.html
audit-logging/: index.html
benchmarks/: multi_run_results.json  run_multi.py  whitepaper_results.json
benchmarks/docker/: Dockerfile.bench  server.py
browser-container-design/: index.html
browser-usage/: index.html
code-sandbox-design/: index.html
code-sandbox-usage/: index.html
decisions/: index.html
decisions/001-ollama-openai-sdk/: index.html
decisions/002-yaml-configuration/: index.html
decisions/003-capability-container-pattern/: index.html
decisions/004-sqlite-audit-logging/: index.html
decisions/005-privacy-first-local-inference/: index.html
docker/: .env.example  FIREWALL_IMPLEMENTATION_SUMMARY.md  FIREWALL_INDEX.md  FIREWALL_QUICK_REFERENCE.md  FIREWALL_README.md  Makefile  README.md  docker-compose.yml  firewall-rules.sh  python-integration-example.py  test-firewall.sh
docker/browser/: Dockerfile  entrypoint.sh
docker/code-exec/: Dockerfile  server.py
docker/filesystem/: Dockerfile
docker/gateway/: Dockerfile
docker/web-search/: Dockerfile
docs/: CONTRIBUTING.md  DEVELOPMENT.md  NOTION_ALIGNMENT_CHECK.md  PHASE_1_1_COMPLETE.md  PHASE_1_DESIGN.md  README.md  audit-logging.md  browser-container-design.md  browser-usage.md  code-sandbox-design.md  code-sandbox-usage.md  documentation-site-proposal.md  documentation-site-summary.md  glossary.md  hitl-design.md  index.md  mcp-gateway-design.md  memory-architecture.md  phase0-implementation-summary.md  phase4-8-integration-plan.md  phase4-implementation-plan.md  phase5-implementation-plan.md  phase5.1.3_threat_scoring_summary.md  phase5.2.1_historical_risk_scoring_summary.md  phase5.3.1_rotation_summary.md  phase5.3.2_zero_downtime_summary.md  phase5.3.3_verification_summary.md  phase5.5.2_alert_rules_summary.md  production-deployment-guide.md  roadmap.md  security-architecture.md  security-credentials.md  security-network.md  security-phase4.1-foundation.md  security-quickstart.md  security-whitepaper.md  troubleshooting.md  vector-store-architecture.md  voice-architecture.md  voice-setup.md
docs/api/: index.md
docs/architecture/: overview.md
docs/decisions/: 001-ollama-openai-sdk.md  002-yaml-configuration.md  003-capability-container-pattern.md  004-sqlite-audit-logging.md  005-privacy-first-local-inference.md  index.md
docs/examples/: multi-node-cluster.md  private-research-assistant.md  secure-code-analysis.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: cluster-setup.md  security-hardening.md
docs/phases/: index.md  phase4-8-integration-plan.md  phase4-8-performance-results.md  phase4-implementation-plan.md  phase5-1.1-anomaly-detection.md  phase5-1.4-threat-intelligence.md  phase5-2.2-trust-manager.md  phase5-2.3-auto-approval.md  phase5-2.4-context-engine.md  phase5-3.3-verification.md  phase5-3.4-emergency-rotation.md  phase5-4.1-cert-pinning.md  phase5-4.2-dpi.md  phase5-4.3-protocol-filter.md  phase5-4.4-traffic-anomaly.md  phase5-5.1-siem-integration.md  phase5-5.3-compliance-reports.md  phase5-5.4-dashboard.md  phase5-completion.md  phase5-implementation-plan.md
docs/security/: overview.md
documentation-site-proposal/: index.html
documentation-site-summary/: index.html
examples/: .gitignore  01_simple_agent.py  02_api_usage.py  03_data_pipeline.py  04_code_review.py  05_research_agent.py  06_cluster_routing.py  06_memory_conversation.py  08_semantic_memory.py  09_voice_assistant.py  README.md
examples/data/: .gitignore  sales_data.csv
examples/multi-node-cluster/: index.html
examples/private-research-assistant/: index.html
examples/research_output/: .gitignore
examples/sample_code/: .gitignore  calculator.py  data_processor.py
examples/secure-code-analysis/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
glossary/: index.html
guides/cluster-setup/: index.html
guides/security-hardening/: index.html
hitl-design/: index.html
mcp-gateway-design/: index.html
memory-architecture/: index.html
paper/: .gitignore  main.tex  references.bib
phase0-implementation-summary/: index.html
phase4-8-integration-plan/: index.html
phase4-8-performance-results/: index.html
phase4-implementation-plan/: index.html
phase5-implementation-plan/: index.html
phases/: index.html
phases/phase0-implementation-summary/: index.html
phases/phase4-8-integration-plan/: index.html
phases/phase4-8-performance-results/: index.html
phases/phase4-implementation-plan/: index.html
phases/phase5-1.1-anomaly-detection/: index.html
phases/phase5-1.3-threat-scoring/: index.html
phases/phase5-1.4-threat-intelligence/: index.html
phases/phase5-2.1-historical-risk-scoring/: index.html
production-deployment-guide/: index.html
roadmap/: index.html
search/: search_index.json
security-architecture/: index.html
security-credentials/: index.html
security-network/: index.html
security-phase4.1-foundation/: index.html
security-quickstart/: index.html
security-whitepaper/: index.html
tests/: conftest.py  test_agent.py  test_circuit_breaker.py  test_cli.py  test_cluster.py  test_config.py  test_llm.py  test_llm_backends.py  test_llm_factory.py  test_metrics.py  test_remote_llm.py  test_router.py  test_server.py  test_tools.py
troubleshooting/: index.html
vector-store-architecture/: index.html
voice-architecture/: index.html
voice-setup/: index.html
(+313 files in other folders)
