[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harombe"
version = "0.1.0"
description = "Self-hosted agent framework for distributed AI workloads"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "harombe contributors" }
]
requires-python = ">=3.11,<3.14"
keywords = ["ai", "agent", "framework", "self-hosted", "distributed", "autonomous", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
    "typer[all]>=0.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.6",  # For file uploads in FastAPI
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "openai>=1.40",
    "httpx>=0.27",
    "rich>=13.7",
    "sse-starlette>=2.0",
    "duckduckgo-search>=6.0",
    "zeroconf>=0.132",  # mDNS service discovery
    "sentence-transformers>=2.2",  # Local embeddings (Phase 2.2)
    "chromadb>=0.4",  # Vector store (Phase 2.2)
    "numpy>=1.24",  # Required for embeddings
    "faster-whisper>=1.0",  # Speech-to-text (Phase 3)
    "piper-tts>=1.2",  # Text-to-speech - fast (Phase 3)
    "sounddevice>=0.4",  # Audio I/O for voice client (Phase 3)
    "pynput>=1.7",  # Keyboard input for push-to-talk (Phase 3)
]

[project.optional-dependencies]
# Coqui TTS (high-quality voice) - only supports Python <3.11
coqui = [
    "TTS>=0.22; python_version < '3.11'",
]

# Docker support for Phase 4 (Security Layer)
docker = [
    "docker>=7.0",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "respx>=0.21",
    "types-pyyaml",
    "pre-commit>=3.6",
]

[project.scripts]
harombe = "harombe.cli.app:main"

[project.urls]
Homepage = "https://github.com/smallthinkingmachines/harombe"
Documentation = "https://github.com/smallthinkingmachines/harombe#readme"
Repository = "https://github.com/smallthinkingmachines/harombe"
Issues = "https://github.com/smallthinkingmachines/harombe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/harombe"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Enable additional rule sets
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "SIM108", # Use ternary operator (not always clearer)
]

[tool.ruff.lint.per-file-ignores]
# Tests can use assertions and relative imports
"tests/**/*.py" = ["S101", "TID252"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=harombe --cov-report=term-missing"
markers = [
    "docker_integration: Integration tests requiring Docker daemon (deselect with '-m \"not docker_integration\"')",
    "cluster_integration: Integration tests requiring multi-node cluster",
]
