[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harombe"
version = "0.1.0"
description = "Full-stack agent framework — voice, memory, tools, security — runs on your hardware, no cloud required"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "harombe contributors" }
]
requires-python = ">=3.11,<3.14"
keywords = ["ai", "agent", "framework", "self-hosted", "security", "container-isolation", "voice", "rag", "mcp", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
    "typer[all]>=0.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.6",  # For file uploads in FastAPI
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "openai>=1.40",
    "httpx>=0.27",
    "rich>=13.7",
    "sse-starlette>=2.0",
    "duckduckgo-search>=6.0",
    "zeroconf>=0.132",  # mDNS service discovery
    "sentence-transformers>=2.2",  # Local embeddings (Phase 2.2)
    "chromadb>=0.4",  # Vector store (Phase 2.2)
    "numpy>=1.24",  # Required for embeddings
    "faster-whisper>=1.0",  # Speech-to-text (Phase 3)
    "piper-tts>=1.2",  # Text-to-speech - fast (Phase 3)
    "dnspython>=2.4",  # DNS resolution for network isolation (Phase 4.4)
    "docker>=7.0",  # Docker SDK for container management (Phase 4)
    "playwright>=1.40",  # Browser automation for Phase 4.6
    "sounddevice>=0.4",  # Audio I/O for voice client (Phase 3)
    "pynput>=1.7",  # Keyboard input for push-to-talk (Phase 3)
    "scikit-learn>=1.3",  # ML models for anomaly detection (Phase 5)
    "scipy>=1.11",  # Statistical functions for threat detection (Phase 5)
    "joblib>=1.3",  # Model persistence (Phase 5)
    "cryptography>=41.0",  # TLS certificate operations (Phase 5.4)
    "mcp>=1.2",  # Model Context Protocol SDK (MCP server/client)
]

[project.optional-dependencies]
# Coqui TTS (high-quality voice) - only supports Python <3.11
coqui = [
    "TTS>=0.22; python_version < '3.11'",
]

# Docker support for Phase 4 (Security Layer)
docker = [
    "docker>=7.0",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "respx>=0.21",
    "types-pyyaml",
    "pre-commit>=3.6",
    # Documentation
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocstrings[python]>=0.24",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
harombe = "harombe.cli.app:main"

[project.entry-points."harombe.plugins"]

[project.urls]
Homepage = "https://github.com/smallthinkingmachines/harombe"
Documentation = "https://github.com/smallthinkingmachines/harombe#readme"
Repository = "https://github.com/smallthinkingmachines/harombe"
Issues = "https://github.com/smallthinkingmachines/harombe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/harombe"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Enable additional rule sets
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "SIM108", # Use ternary operator (not always clearer)
]

[tool.ruff.lint.isort]
known-third-party = ["mcp"]

[tool.ruff.lint.per-file-ignores]
# Tests can use assertions and relative imports
"tests/**/*.py" = ["S101", "TID252"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "docker.*",
    "chromadb.*",
    "sklearn.*",
    "joblib.*",
    "faster_whisper.*",
    "piper.*",
    "sounddevice.*",
    "pynput.*",
    "sentence_transformers.*",
    "TTS.*",
    "discord.*",
    "slack_bolt.*",
    "dns.*",
    "anthropic.*",
    "boto3.*",
    "zeroconf.*",
    "scipy.*",
]
ignore_missing_imports = true

# These modules use decorators whose mypy error code differs between
# environments (misc vs untyped-decorator depending on installed stubs).
[[tool.mypy.overrides]]
module = [
    "harombe.channels.slack",
    "harombe.channels.discord",
    "harombe.mcp.server",
]
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=harombe --cov-report=term-missing"
markers = [
    "docker_integration: Integration tests requiring Docker daemon (deselect with '-m \"not docker_integration\"')",
    "cluster_integration: Integration tests requiring multi-node cluster",
    "docker: Tests requiring Docker daemon (deselect with '-m \"not docker\"')",
    "integration: Integration tests that test multiple components together",
]
